API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

05-Jul-1999
	Added MAXCHAPTER and MAXVERSE as POSITIONs in VerseKey
	Added Key() method for setting / getting key on SWModule
	Added kludge to UpperBound for setting verse and chapter to max
		values if not specified
	Fixed bugs where error was not being set correctly for some
		traversals of SWModule

05-Jun-1999
	Sorry for not keeping the ChangeLog current
	Lots of other stuff I'm sure I forgot
	New mods.d configuration
	Begin phase out of RawGBF.  Move to RawText with SourceType=GBF
	Added OptionFilters
	Added scoped searches
	More bug fixes, as always
	Profiling to speed up some sections of code
	
09-Jan-1999
	Various API bug fixes.
	Added naviation support for all module types
	Added search support for all module types
	Added standard mods.conf location lookups to SWMgr

15-Dec-1999
	Added cheatah, a simple lookup and search gtk GUI

12-Nov-1998
	1.3.1 release.
	Started making entries in ChangeLog again! :)
	Moved directory structure.
	Added Luis Cortes' wxSword frontend to apps tree. GREAT START!
	Fixed bug in canon.h that incorrectly assumed static structures were
		allocated on the heap sequential if they were in the source 
		sequentially.
	Changed SWModule::Search(char *... to SWModule::Search(const char *
	Removed -Werror from Makefile.cfg to avoid problems with different
		warnings that get displayed with different versions of egcs
	
12-Dec-1997
	Fixed typo in about box of BibleCS
	Changed font copyright notice in n27u4

09-Dec-1997
	Fixed Search window in BibleCS to search currently focused Bible Text module
		and report such in the title bar.
	Added ALPHA website to the CD Loader
	Added a full report of the About section of a module when installing. (BibleCS)
	Renamed module n26u4 to n27u4.

04-Dec-1997
	Added DDE to BibleCS frontend.  Thanx to Franklin Bratcher for the idea.
		Service = sword; Topic = Bible;