@@ -7,7 +7,7 @@ version := 1.4.4
 
 # paths
 
-instdir   := /usr/sword
+instdir   := /usr/local
 
 bindir    := ${instdir}/bin
 libdir    := ${instdir}/lib
